# thesis_scheduler_simulator

./: .gitignore  README.md  algorithms.py  main.py  plot_results.py  pyproject.toml  run_evals.sh  visualization.py
.github/workflows/: lint-typecheck.yml
src/: algorithms.py  analysis.py  best_fit.py  eval.py  eval_multi_summary.py  eval_utils.py  first_fit_fast.py  generate_dataset.py  main.py  packing.py  peak_demand_scheduler.py  performance_profile.py  problem_generation.py  ruin_recreate.py  simple_scheduler.py  solve_exact.py  visualization.py
src/simulator/: __init__.py  algorithms.py  best_fit.py  packing.py  peak_demand_scheduler.py  problem.py  ruin_recreate.py  schedulers.py  simple_scheduler.py  solve_exact.py
